WebP animation: Loop once more than stored loop count.

This is to match existing behavior for GIF in Chrome and other browsers.

BUG=592735

Review URL: https://codereview.chromium.org/1780463007

Cr-Commit-Position: refs/heads/master@{#380847}

Former-commit-id: 7b7ed0e2c9ce2de3f23102d1eb4c9625a9d73f30